# videoinfo

./: .env  Cargo.toml  data.sqlite3  debug.nu  index.html
src/: dao.rs  errors.rs  es.rs  fhash.rs  handler.rs  init.rs  lib.rs  main.rs  model.rs  thumbnail.rs
web/: index.html
