[package]
name = "videoinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rayon = "1.10.0"
everything-sdk = { version = "0.0.6", features = ["async"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
regex = "1.11.1"
thiserror = "2.0.12"
futures = "0.3.31"
base64 = "0.22.1"
headers = "0.4.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
notify = "8.0.0"
async-stream = { version = "0.3.6" }

